nginx+mysql-argocd/mysql-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-client
  labels:
    app: mysql-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-client
  template:
    metadata:
      labels:
        app: mysql-client
    spec:
      containers:
      - name: mysql-client
        image: mysql:8.0
