nginx+mysql-argocd/service-connect-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-connect
spec:
  type: NodePort
  selector:
    app: connect
    #app.kubernetes.io/name: mysql
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  #internalTrafficPolicy: Local
