nginx+mysql-argocd/service-write-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-write
spec:
  type: NodePort
  selector:
    app: write
    #app.kubernetes.io/name: mysql
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  #internalTrafficPolicy: Local
